force-app/main/default/objects/sked__Templated_Activity__c/sked__Templated_Activity__c.object-meta.xml
<CustomObject>
    <label>Templated Activity</label>
    <nameField>
        <displayFormat>TAC-{0000}</displayFormat>
        <label>Templated Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>