force-app/main/default/objects/sked__Templated_Activity__c/fields/sked__Address__c.field-meta.xml
<CustomField>
    <fullName>sked__Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>