force-app/main/default/objects/sked__Templated_Activity__c/fields/sked__GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>sked__GeoLocation__c</fullName>
    <label>GeoLocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>