force-app/main/default/objects/sked__Templated_Activity__c/fields/sked__Location__c.field-meta.xml
<CustomField>
    <fullName>sked__Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipLabel>Templated Activities</relationshipLabel>
    <relationshipName>Templated_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>