force-app/main/default/objects/sked__Templated_Activity__c/fields/sked__Notes__c.field-meta.xml
<CustomField>
    <fullName>sked__Notes__c</fullName>
    <label>Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>