force-app/main/default/objects/sked__Templated_Activity__c/fields/sked__Quantity__c.field-meta.xml
<CustomField>
    <fullName>sked__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>