force-app/main/default/objects/sked__Templated_Activity__c/fields/sked__Resource__c.field-meta.xml
<CustomField>
    <fullName>sked__Resource__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Resource</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>Templated Activities</relationshipLabel>
    <relationshipName>Templated_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>