force-app/main/default/objects/sked__Templated_Activity__c/fields/sked__Start_Time_Of_Day__c.field-meta.xml
<CustomField>
    <fullName>sked__Start_Time_Of_Day__c</fullName>
    <label>Start Time Of Day</label>
    <required>true</required>
    <type>Time</type>
</CustomField>