force-app/main/default/objects/sked__Templated_Activity__c/fields/sked__Timezone__c.field-meta.xml
<CustomField>
    <fullName>sked__Timezone__c</fullName>
    <label>Timezone</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>