force-app/main/default/objects/sked__Templated_Activity__c/validationRules/sked__QuantityNullOrPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__QuantityNullOrPositive</fullName>
    <active>true</active>
    <description>Quantity of Resources required must be null or greater than 0</description>
    <errorConditionFormula>AND( NOT( ISNULL( sked__Quantity__c ) ) , sked__Quantity__c  &lt;= 0 )</errorConditionFormula>
    <errorDisplayField>sked__Quantity__c</errorDisplayField>
    <errorMessage>Quantity of Resources required must be null or greater than 0</errorMessage>
</ValidationRule>