force-app/main/default/objects/sked__Templated_Activity__c/validationRules/sked__StartOffsetDaysNonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__StartOffsetDaysNonNegative</fullName>
    <active>true</active>
    <errorConditionFormula>sked__Start_Offset_Days__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>sked__Start_Offset_Days__c</errorDisplayField>
    <errorMessage>Start Offset Days Must be non-negative</errorMessage>
</ValidationRule>